tests/ui/auto-traits/typeck-auto-trait-no-supertraits.stderr
error[E0568]: auto traits cannot have super traits or lifetime bounds
  --> $DIR/typeck-auto-trait-no-supertraits.rs:29:12
   |
LL | trait Magic: Copy {}
   |       -----^^^^^^ help: remove the super traits or lifetime bounds
   |       |
   |       auto traits cannot have super traits or lifetime bounds

error: aborting due to previous error

For more information about this error, try `rustc --explain E0568`.
